# admiralpy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
admiralpy/: __init__.py  compute.py  convert_dtc.py  derive_param_computed.py  derive_var_baseline.py  derive_vars_dt.py  derive_vars_merged.py  filter_extreme.py
admiralpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/compute/: index.html
api/convert_dtc/: index.html
api/derive_param_computed/: index.html
api/derive_var_baseline/: index.html
api/derive_vars_dt/: index.html
api/derive_vars_merged/: index.html
api/filter_extreme/: index.html
changelog/: index.html
docs/: changelog.md  get_started.md  index.md
docs/api/: compute.md  convert_dtc.md  derive_param_computed.md  derive_var_baseline.md  derive_vars_dt.md  derive_vars_merged.md  filter_extreme.md
get_started/: index.html
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/compute/: index.html
site/api/convert_dtc/: index.html
site/api/derive_param_computed/: index.html
site/api/derive_var_baseline/: index.html
site/api/derive_vars_dt/: index.html
site/api/derive_vars_merged/: index.html
site/api/filter_extreme/: index.html
site/get_started/: index.html
site/search/: search_index.json
tests/: test_compute.py  test_convert_dtc.py  test_derive_param_computed.py  test_derive_var_baseline.py  test_derive_vars_dt.py  test_derive_vars_merged.py  test_filter_extreme.py
